--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
     <title>My Toolbox</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         :root { --bg: #000000; --card: #1c1c1e; --text: #ffffff; }
         
@@ -152,3 +153,4 @@
     </script>
 </body>
 </html>
+
