--- a/autolog.html
+++ b/autolog.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212">
     <title>AutoLog v3.2</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         :root { --bg: #121212; --card: #1E1E1E; --text: #E0E0E0; --accent: #4FC3F7; --green: #00E676; --yellow: #FFD54F; --red: #CF6679; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: var(--bg); color: var(--text); margin: 0; padding-bottom: 100px; }
@@ -113,3 +114,4 @@
     </script>
 </body>
 </html>
+
