--- a/fairsplit.html
+++ b/fairsplit.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>FairSplit v13</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         :root { --primary: #5856d6; --bg: #f2f2f7; --card: #ffffff; --green: #34c759; --red: #ff3b30; --whatsapp: #25D366; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: var(--bg); margin: 0; padding: 20px; color: #333; padding-top: max(20px, env(safe-area-inset-top)); padding-bottom: max(40px, env(safe-area-inset-bottom)); }
@@ -127,3 +128,4 @@
     </script>
 </body>
 </html>
+
