--- a/pricewar.html
+++ b/pricewar.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212">
     <title>Price War</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         :root { --bg: #121212; --card: #1E1E1E; --text: #fff; --green: #00E676; --red: #FF5252; --blue: #2979FF; --gray: #333; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background-color: var(--bg); color: var(--text); margin: 0; padding: 20px; padding-top: max(20px, env(safe-area-inset-top)); padding-bottom: max(40px, env(safe-area-inset-bottom)); display: flex; flex-direction: column; min-height: 100vh; }
@@ -90,3 +91,4 @@
     </script>
 </body>
 </html>
+
