--- a/subtrack.html
+++ b/subtrack.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212">
     <title>SubTrack v8</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         :root { --bg: #121212; --card: #1E1E1E; --text: #E0E0E0; --accent: #BB86FC; --red: #CF6679; --green: #03DAC6; --yellow: #FFD54F; --blue: #4fc3f7; }
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: var(--bg); color: var(--text); margin: 0; padding: 20px; padding-top: max(20px, env(safe-area-inset-top)); padding-bottom: max(100px, env(safe-area-inset-bottom)); }
@@ -87,3 +88,4 @@
     </script>
 </body>
 </html>
+
