--- a/tracker.html
+++ b/tracker.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#f2f2f7">
     <title>SpendTracker v9</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         :root { --primary: #007AFF; --bg: #f2f2f7; --card: #ffffff; --danger: #ff3b30; --edit: #FF9500; --purple: #5856d6; --green: #34c759;}
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: var(--bg); margin: 0; padding: 20px; color: #333; -webkit-tap-highlight-color: transparent; padding-top: max(20px, env(safe-area-inset-top)); padding-bottom: max(80px, env(safe-area-inset-bottom)); }
@@ -82,3 +83,4 @@
     </script>
 </body>
 </html>
+
