--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
             <div class="app-name">Price War</div>
             <div class="app-desc">Compare</div>
         </div>
+        <div class="app-card" onclick="window.location.href='expiry.html'">
+    <div class="icon-box" style="background: linear-gradient(135deg, #FF9800, #F57C00);">🛡️</div>
+    <div class="app-name">Expiry</div>
+    <div class="app-desc">Assets & Docs</div>
+</div>
     </div>
 
     <div class="modal-overlay" id="modalBackup">
@@ -153,4 +158,5 @@
     </script>
 </body>
 </html>
+
 
