--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <input type="file" id="fileInput" style="display:none" onchange="handleFileSelect(this)">
 
     <script>
-        const KEYS = ['autolog_v2','myExpenses','myCategories','st_edit_subs','fs_items','fs_friends','fs_tax','fs_svc'];
+        const KEYS = ['autolog_v2','myExpenses','myCategories','st_edit_subs','fs_items','fs_friends','fs_tax','fs_svc','expiry_data'];
         function openBackup(){document.getElementById('modalBackup').style.display='flex'}
         function closeBackup(){document.getElementById('modalBackup').style.display='none'}
         function exportAll(){
@@ -158,5 +158,6 @@
     </script>
 </body>
 </html>
+
 
 
